added my first blog

--- a/index.html
+++ b/index.html
@@ -3,9 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles/blog.css">
     <title>My first ever github</title>
 </head>
 <body>
-    
+    <div>
+        <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+             Quas enim rerum, mollitia magnam libero tempore! Voluptas,
+              quaerat doloremque? Ducimus quam, temporibus saepe dolor excepturi 
+              quo nobis in vero eos illum.</h3>
+
+    </div>
 </body>
 </html>
