added second blog

--- a/index.html
+++ b/index.html
@@ -14,5 +14,20 @@
               quo nobis in vero eos illum.</h3>
 
     </div>
+     <div>
+        <h3>My second blog</h3>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sed, debitis aperiam. 
+            Aliquid, cupiditate? Dolores eius accusantium tempora impedit incidunt 
+            dignissimos blanditiis error nemo. Quis omnis ex consectetur cumque velit 
+            veritatis?</p>
+
+    </div>
+     <div>
+        <h3>My third blog</h3>
+         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sed, debitis aperiam. 
+            Aliquid, cupiditate? Dolores eius accusantium tempora impedit incidunt 
+            dignissimos blanditiis error nemo. Quis omnis ex consectetur cumque velit 
+            veritatis?</p>
+    </div>
 </body>
 </html>
