--- a/index.html
+++ b/index.html
@@ -29,5 +29,14 @@
             dignissimos blanditiis error nemo. Quis omnis ex consectetur cumque velit 
             veritatis?</p>
     </div>
+    <div>
+        <h3>how to push incremental code</h3>
+        <ul>
+            <li>git add .</li>
+            <li>git commit -m"meaningful msg"</li>
+            <li>git push</li>
+        </ul>
+
+    </div>
 </body>
 </html>
