--- a/index.html
+++ b/index.html
@@ -38,5 +38,9 @@
         </ul>
 
     </div>
+    <div>
+        <h3>Added img</h3>
+        <img src="img/pic.jpeg.jpg" alt="">
+    </div>
 </body>
 </html>
